<resources>
    <string name="app_name">DnD_Character_Vault</string>
    <string name="app_name_header">Dungeons and Dragons Character Vault</string>
    <string name="sign_in_header">Sign In or Create a New Account</string>
    <string name="create_new_account_button">Create new account</string>
    <string name="sign_in_button">Sign in</string>
    <string name="signin_page_enter_username">Enter Username</string>
    <string name="signin_page_enter_pass">Enter Password</string>
    <string name="select_character__landing_button_text">Select an existing Character</string>
    <string name="logout_button_text">Logout</string>
    <string name="create_character_select_page">Create a New Character</string>
</resources>